--- a/doc/base/version/2.1-3.0.md
+++ b/doc/base/version/2.1-3.0.md
@@ -115,6 +115,15 @@ return [
 
 由于 Hprose 官方弃坑，废弃并移出主仓库，代码仓库：<https://github.com/imiphp/imi-hprose>
 
+### imi-redis
+
+* 弃用为核心独立组件
+* 适配新连接中心
+* 支持多客户端支持(`phpredis`, `predis`)
+* 支持`TLS`连接
+* 新的使用方法请[参考文档](/v3.0/components/redis/index.html)
+* 废弃`\Imi\Redis\RedisHandler::class`，使用到的地方请迁移为`\Imi\Redis\Handler\IRedisHandler::class`或者具体实现类
+
 ### 废弃
 
 * 废弃命名空间声明在 `config.php` 的写法，统一写到 `composer.json` 的 `imi.namespace`
