Update: 应用 markdownlint 修复

--- a/doc/base/version/2.1-3.0.md
+++ b/doc/base/version/2.1-3.0.md
@@ -65,31 +65,31 @@ return [
 
 ### 框架核心
 
-* `psr/http-message` 版本升级，请求和响应相关类的类型声明有改动
+- `psr/http-message` 版本升级，请求和响应相关类的类型声明有改动
 
-* 重构注解类写法
+- 重构注解类写法
 
-* Bean 类默认不支持互相注入，需要使用注解声明 `#[Bean(recursion: true)]`
+- Bean 类默认不支持互相注入，需要使用注解声明 `#[Bean(recursion: true)]`
 
-* 定时任务 `Imi\Cron\Annotation\Cron` 注解的 `unique` 值类型更改为 `\Imi\Cron\Consts\UniqueLevel` 枚举，大小写有所变化
+- 定时任务 `Imi\Cron\Annotation\Cron` 注解的 `unique` 值类型更改为 `\Imi\Cron\Consts\UniqueLevel` 枚举，大小写有所变化
 
 ### 事件
 
-* 使用注解监听事件，`public function handle(Imi\Event\EventParam $e): void` 改为 `public function handle(Imi\Event\Contract\IEvent $e): void`
+- 使用注解监听事件，`public function handle(Imi\Event\EventParam $e): void` 改为 `public function handle(Imi\Event\Contract\IEvent $e): void`
 
-* `Imi\Event::trigger()` 计划废弃，建议改为 `Imi\Event::dispatch()`，用法有所变动，请查阅文档
+- `Imi\Event::trigger()` 计划废弃，建议改为 `Imi\Event::dispatch()`，用法有所变动，请查阅文档
 
-* 事件名称规则统一改为全小写，为保持兼容请[参考文档](/v3.0/event/index.html#3.0%20兼容性)
+- 事件名称规则统一改为全小写，为保持兼容请[参考文档](/v3.0/event/index.html#3.0%20兼容性)
 
 ### 模型
 
-* UUID 发号器的 `type` 类型改为枚举，大小写有所变化
+- UUID 发号器的 `type` 类型改为枚举，大小写有所变化
 
-* 模型类静态事件命名更改，连接符由`:`改为`.`，事件名称也有改变请[参考文档](/v3.0/components/orm/RDModel/event.html)
+- 模型类静态事件命名更改，连接符由`:`改为`.`，事件名称也有改变请[参考文档](/v3.0/components/orm/RDModel/event.html)
 
 ### WebSocket
 
-* 重构 `Imi\Server\WebSocket\Enum::NonControlFrameType` 为枚举
+- 重构 `Imi\Server\WebSocket\Enum::NonControlFrameType` 为枚举
 
 ### imi-access-control
 
@@ -97,15 +97,15 @@ return [
 
 ### imi-amqp
 
-* 连接配置项有所增改，参考 [连接配置项](https://doc.imiphp.com/v3.0/components/mq/amqp.html#%E8%BF%9E%E6%8E%A5%E9%85%8D%E7%BD%AE%E9%A1%B9)
+- 连接配置项有所增改，参考 [连接配置项](https://doc.imiphp.com/v3.0/components/mq/amqp.html#%E8%BF%9E%E6%8E%A5%E9%85%8D%E7%BD%AE%E9%A1%B9)
 
-* `Imi\AMQP\Annotation\Connection` 注解类的连接配置全部废弃，只保留 `poolName`
+- `Imi\AMQP\Annotation\Connection` 注解类的连接配置全部废弃，只保留 `poolName`
 
-* 废弃 `Imi\AMQP\Swoole\AMQPSwooleConnection` 客户端类
+- 废弃 `Imi\AMQP\Swoole\AMQPSwooleConnection` 客户端类
 
-* 消费者类 `Imi\AMQP\Base\BaseConsumer::consume()` 方法返回值类型应设置为 `\Imi\AMQP\Enum\ConsumerResult`，且必须返回枚举值
+- 消费者类 `Imi\AMQP\Base\BaseConsumer::consume()` 方法返回值类型应设置为 `\Imi\AMQP\Enum\ConsumerResult`，且必须返回枚举值
 
-* `Imi\Queue\Enum\QueueType` 改为原生注解，如需自定义请编写枚举并实现 `Imi\Queue\Enum\QueueType\IQueueType` 接口
+- `Imi\Queue\Enum\QueueType` 改为原生注解，如需自定义请编写枚举并实现 `Imi\Queue\Enum\QueueType\IQueueType` 接口
 
 ### imi-macro
 
@@ -117,32 +117,32 @@ return [
 
 ### imi-redis
 
-* 弃用为核心独立组件
-* 适配新连接中心
-* 支持多客户端支持(`phpredis`, `predis`)
-* 支持`TLS`连接
-* 新的使用方法请[参考文档](/v3.0/components/redis/index.html)
-* 废弃`\Imi\Redis\RedisHandler::class`，使用到的地方请迁移为`\Imi\Redis\Handler\IRedisHandler::class`或者具体实现类
+- 弃用为核心独立组件
+- 适配新连接中心
+- 支持多客户端支持(`phpredis`, `predis`)
+- 支持`TLS`连接
+- 新的使用方法请[参考文档](/v3.0/components/redis/index.html)
+- 废弃`\Imi\Redis\RedisHandler::class`，使用到的地方请迁移为`\Imi\Redis\Handler\IRedisHandler::class`或者具体实现类
 
 ### 废弃
 
-* 废弃命名空间声明在 `config.php` 的写法，统一写到 `composer.json` 的 `imi.namespace`
+- 废弃命名空间声明在 `config.php` 的写法，统一写到 `composer.json` 的 `imi.namespace`
 
-* 废弃支持模型 insert、update 传入 $data 参数
+- 废弃支持模型 insert、update 传入 $data 参数
 
-* 废弃模型基类中使用 `ConfigValue` 注解，改为在 `Meta` 类中读取配置
+- 废弃模型基类中使用 `ConfigValue` 注解，改为在 `Meta` 类中读取配置
 
-* 废弃按表指定模型生成配置
+- 废弃按表指定模型生成配置
 
-* 废弃 `Imi\Model\ModelManager`
+- 废弃 `Imi\Model\ModelManager`
 
-* 废弃 `Model::updateBatch()` 和 `Model::deleteBatch()`
+- 废弃 `Model::updateBatch()` 和 `Model::deleteBatch()`
 
-* 废弃模型查询时动态指定字段名的特殊处理
+- 废弃模型查询时动态指定字段名的特殊处理
 
-* 废弃注释注解，改为全部使用原生注解
+- 废弃注释注解，改为全部使用原生注解
 
-* 废弃命令行相关类：（右侧是新的类名）
+- 废弃命令行相关类：（右侧是新的类名）
 
 `Imi\Cli\Annotation\Arg` => `Imi\Cli\Annotation\Option`
 
@@ -158,9 +158,9 @@ return [
 
 `Imi\Tool\ArgType` => `Imi\Cli\ArgType`
 
-* 废弃 `Query::alias()`
+- 废弃 `Query::alias()`
 
-* 废弃 `Query::chunkEach()`，改为：
+- 废弃 `Query::chunkEach()`，改为：
 
 ```php
 $query->chunkById($count, $column, $alias)->each();
@@ -168,18 +168,18 @@ $query->chunkById($count, $column, $alias)->each();
 $query->chunkByOffset($limit)->each();
 ```
 
-* 废弃 `Imi\Pool\ResourceConfigMode::TURN` 改为 `Imi\Pool\ResourceConfigMode::ROUND_ROBIN`
+- 废弃 `Imi\Pool\ResourceConfigMode::TURN` 改为 `Imi\Pool\ResourceConfigMode::ROUND_ROBIN`
 
-* 废弃连接池类的 `createResource()` 方法，改为 `createNewResource()`，影响自定义连接池
+- 废弃连接池类的 `createResource()` 方法，改为 `createNewResource()`，影响自定义连接池
 
-* 废弃 `Imi\Util\DateTime::getLastWeek()`，错误的命名，改为 `Imi\Util\DateTime::getPrevWeek()`
+- 废弃 `Imi\Util\DateTime::getLastWeek()`，错误的命名，改为 `Imi\Util\DateTime::getPrevWeek()`
 
-* 废弃 `ExtractData` 注解，建议使用 `RequestParam`
+- 废弃 `ExtractData` 注解，建议使用 `RequestParam`
 
-* 废弃 `ErrorLog::onException()`，建议使用 `Imi\Log\Log::error()`
+- 废弃 `ErrorLog::onException()`，建议使用 `Imi\Log\Log::error()`
 
-* 废弃 Swoole MySQL 客户端，建议使用 PDO 和 mysqli
+- 废弃 Swoole MySQL 客户端，建议使用 PDO 和 mysqli
 
-* 废弃 gRPC 旧的 Server 相关类
+- 废弃 gRPC 旧的 Server 相关类
 
-* 废弃 `imiGetEnv()`、建议使用 `Imi\env()`
+- 废弃 `imiGetEnv()`、建议使用 `Imi\env()`
