连接中心增加 createConnection() 方法，重构 Imi\Db\Db::getNewInstance()

--- a/doc/base/version/2.1-3.0.md
+++ b/doc/base/version/2.1-3.0.md
@@ -81,6 +81,10 @@ return [
 
 * 事件名称规则统一改为全小写，为保持兼容请[参考文档](/v3.0/event/index.html#3.0%20兼容性)
 
+### 数据库
+
+* `Imi\Db\Db::getNewInstance()` 返回值改为 `Imi\ConnectionCenter\Contract\IConnection`
+
 ### 模型
 
 * UUID 发号器的 `type` 类型改为枚举，大小写有所变化
